<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_dark">

        <ImageView
            android:id="@+id/login_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="@dimen/margin_padding_size_small"
            android:layout_marginTop="@dimen/margin_padding_size_small"
            android:layout_marginEnd="@dimen/margin_padding_size_small"
            android:layout_marginBottom="@dimen/margin_padding_size_small"
            android:src="@drawable/stack_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.29000002" />

        <TextView
            android:id="@+id/login_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_size_small"
            android:layout_marginTop="@dimen/margin_padding_size_small"
            android:layout_marginEnd="@dimen/margin_padding_size_small"
            android:text="@string/stack_overflow_login"
            android:textColor="@color/login_text_color"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_img" />

        <TextView
            android:id="@+id/login_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_size_small"
            android:layout_marginTop="@dimen/margin_padding_size_medium"
            android:layout_marginEnd="@dimen/margin_padding_size_small"
            android:text="@string/addl_text_login"
            android:textColor="@color/login_text_color"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_tv1" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_size_small"
            android:layout_marginTop="@dimen/margin_padding_size_small"
            android:layout_marginEnd="@dimen/margin_padding_size_small"
            android:layout_marginBottom="@dimen/margin_padding_size_small"
            android:background="@color/deep_blue_A200"
            android:padding="@dimen/margin_padding_size_medium"
            android:text="@string/button_text_login"
            android:textAllCaps="false"
            android:textColor="@color/login_text_color"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_tv2"
            app:layout_constraintVertical_bias="0.307" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>


